FTBFS with GCC 13 #103960

Closed
opened 2023-01-18 09:54:22 +01:00 by Martin Liška · 6 comments

Fails to build due to:
https://gcc.gnu.org/gcc-13/porting_to.html#header-dep-changes

[   65s] /home/abuild/rpmbuild/BUILD/blender-3.4.0/intern/cycles/util/thread.cpp: In member function 'bool ccl::thread::join()':
[   65s] /home/abuild/rpmbuild/BUILD/blender-3.4.0/intern/cycles/util/thread.cpp:50:34: error: expected unqualified-id before '&' token
[   65s]    50 |   catch (const std::system_error &) {
[   65s]       |                                  ^
[   65s] /home/abuild/rpmbuild/BUILD/blender-3.4.0/intern/cycles/util/thread.cpp:50:33: error: expected ')' before '&' token
[   65s]    50 |   catch (const std::system_error &) {
[   65s]       |         ~                       ^~
[   65s]       |                                 )
[   65s] /home/abuild/rpmbuild/BUILD/blender-3.4.0/intern/cycles/util/thread.cpp:50:34: error: expected '{' before '&' token
[   65s]    50 |   catch (const std::system_error &) {
[   65s]       |                                  ^
[   65s] /home/abuild/rpmbuild/BUILD/blender-3.4.0/intern/cycles/util/thread.cpp:50:35: error: expected primary-expression before ')' token
[   65s]    50 |   catch (const std::system_error &) {
[   65s]       |                                   ^

please include <system_error>

Fails to build due to: https://gcc.gnu.org/gcc-13/porting_to.html#header-dep-changes ``` [ 65s] /home/abuild/rpmbuild/BUILD/blender-3.4.0/intern/cycles/util/thread.cpp: In member function 'bool ccl::thread::join()': [ 65s] /home/abuild/rpmbuild/BUILD/blender-3.4.0/intern/cycles/util/thread.cpp:50:34: error: expected unqualified-id before '&' token [ 65s] 50 | catch (const std::system_error &) { [ 65s] | ^ [ 65s] /home/abuild/rpmbuild/BUILD/blender-3.4.0/intern/cycles/util/thread.cpp:50:33: error: expected ')' before '&' token [ 65s] 50 | catch (const std::system_error &) { [ 65s] | ~ ^~ [ 65s] | ) [ 65s] /home/abuild/rpmbuild/BUILD/blender-3.4.0/intern/cycles/util/thread.cpp:50:34: error: expected '{' before '&' token [ 65s] 50 | catch (const std::system_error &) { [ 65s] | ^ [ 65s] /home/abuild/rpmbuild/BUILD/blender-3.4.0/intern/cycles/util/thread.cpp:50:35: error: expected primary-expression before ')' token [ 65s] 50 | catch (const std::system_error &) { [ 65s] | ^ ``` please include `<system_error>`
Author

Added subscriber: @marxin

Added subscriber: @marxin
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Archived'

Changed status from 'Needs Triage' to: 'Archived'
Member

Hi, thanks for opening a report. But this bugtracker is not usually used for build related questions. See What not to report here
You can reach out to devs in [#blender-builds ]] channel for such questions. Or you can open a topic on [ https:*devtalk.blender.org/c/blender/building-blender/11 | devtalk

Hi, thanks for opening a report. But this bugtracker is not usually used for build related questions. See [What not to report here ](https://developer.blender.org/maniphest/task/edit/form/1/) You can reach out to devs in [#blender-builds ]] channel for such questions. Or you can open a topic on [[ https:*devtalk.blender.org/c/blender/building-blender/11 | devtalk ](https:*blender.chat/channel/blender-builds)

This issue was referenced by e8d1d1486e

This issue was referenced by e8d1d1486e3d9d8495af4c0903d6eb3e24a92094

Changed status from 'Archived' to: 'Resolved'

Changed status from 'Archived' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#103960
No description provided.