Fix T103960: build issue with GCC 13 in Cycles thread code